# macos-trust

./: .gitignore  .macos-trust-demo.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  config.example.yaml  pyproject.toml  release.sh  requirements.txt
.github/: FUNDING.yml  RELEASE_CHECKLIST.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vendor_addition.md
.github/workflows/: pages.yml  security.yml  tests.yml
docs/: example-report.html  false-positive-reduction.md
macos_trust/: __init__.py  baseline.py  cli.py  config.py  context.py  engine.py  models.py  rules.py  vendors.py
macos_trust/collectors/: __init__.py  codesign.py  entitlements.py  items.py  quarantine.py  spctl.py
macos_trust/output/: __init__.py  formatters.py  html.py  render.py  sarif.py
macos_trust/scanners/: __init__.py  apps.py  browser.py  kext.py  launchd.py  security.py
macos_trust/util/: __init__.py  host.py  process.py  shell.py
tests/: test_macos_trust.py  test_new_features.py
