[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-trust"
version = "0.1.0"
description = "A macOS security and trust scanner"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
macos-trust = "macos_trust.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["macos_trust*"]
